--- a/Mini_Projects/Projetos Basicos/Cafeteria/style.css
+++ b/Mini_Projects/Projetos Basicos/Cafeteria/style.css
@@ -31,7 +31,7 @@ li a {
 
 .item {
     width: 250px;
-    height: 250px;
+    height: 300px;
     box-shadow: 1px 3px 3px black;
     margin: 0 auto;
 }
@@ -47,4 +47,8 @@ li a {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     margin-top: 5%;
+}
+
+.item, h4, h5 {
+    text-align: center;
 }
