--- a/Mini_Projects/Projetos_intermediario/SIte_de_Anime_com_API/style.css
+++ b/Mini_Projects/Projetos_intermediario/SIte_de_Anime_com_API/style.css
@@ -2,14 +2,29 @@
     padding: 0;
     margin: 0;
 }
+
 .header {
     background-color: blueviolet;
     padding: 15px;
+    display: flex;
+    align-items: center;
 }
+
+#search {
+    position: relative;
+    margin-left: 250px;
+    width: 450px;
+    height: 75px;
+    font-size: 25px;
+}
+
+
 .logo {
     color: white;
     font-size: 40px;
+    margin-left: 25px;
 }
+
 #anime-list {
     display: flex;
     flex-wrap: wrap;
