--- a/Playground Javacript/rpg/style.css
+++ b/Playground Javacript/rpg/style.css
@@ -157,7 +157,19 @@ input {
 
 
 .chooseClassDiv {
-    border: 1px solid black;
-    height: 300px;
+    border: 1px solid rgb(0, 0, 0);
+    height: 340px;
     width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.SelectClassButton {
+    height: 40px;
+    width: 140px;
+    background-color: deepskyblue;
+    border: 1px solid whitesmoke;
+    border-radius: 8px;
 }
