--- a/ProjetosPortifolio/AnimeParty/public/style.css
+++ b/ProjetosPortifolio/AnimeParty/public/style.css
@@ -13,6 +13,19 @@ header {
     
 }
 
+.footer {
+    background-color: #333;
+    height: 100px;
+    margin-top: 8%;
+}
+
+.footer > h2 {
+    color: white;
+    font-size: 1.7em;
+    text-align: center;
+    padding: 15px;
+}
+
 .searchBox {
     padding: 10px;
     width: 250px;
